--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -p tsconfig.json",
     "watch": "npm run build -- --watch"
   },
-  "author": "",
+  "author": "Goutham Srikar a.k.a amsrik",
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.70.0",
